--- a/index.Rmd
+++ b/index.Rmd
@@ -37,7 +37,7 @@ $\, $
 
 <span>\Large**MY451: Introduction to Quantitative Analysis**</span>
 
-#### Course Description
+#### Course Description {-}
 
 This course is intended for those with little or no past training in
 quantitative methods. The course is an intensive introduction to some of
@@ -58,14 +58,14 @@ Please note that up to 2010-11 the course was called MI451, so older
 materials will bear that code. For example, you will find past
 examination papers on the Library website under MI451.
 
-#### Course Objectives
+#### Course Objectives {-}
 
 This course aims to impart a level of familiarity suitable for a
 moderately critical understanding of the statistical material in the
 journals commonly used by students in their work and the ability to use
 some elementary techniques.
 
-#### Staff
+#### Staff {-}
 
 -   **Teachers responsible**: Dominik Hangartner in MT; Jonathan Jackson
     in LT
@@ -79,7 +79,7 @@ some elementary techniques.
 
 \newpage
 
-#### Teaching
+#### Teaching {-}
 
 -   **Lectures**: Ten two-hour lectures in weeks 1 - 5 and 7 - 11:
 
@@ -97,7 +97,7 @@ some elementary techniques.
     first lecture and on the MY451 Moodle page. Please do not change the
     classes allocated to you without our consent.
 
-#### Course Materials
+#### Course Materials {-}
 
 -   **Coursepack**: This coursepack is the main course text. Printed
     copies of this coursepack will be available for purchase at the
@@ -141,7 +141,7 @@ some elementary techniques.
         statistics or SPSS. If, however, you feel otherwise, some such
         books are mentioned on page \pageref{p_spssbooks}.
 
-#### Homework
+#### Homework {-}
 
 There will be homework assignments each week. These are your opportunity
 to practice interpreting the results of the types of analyses that are
@@ -162,7 +162,8 @@ number and class teacher of your computer class on all homework
 assignments. For the homework assignments, students are encouraged to
 work together.
 
-#### MY451 on Moodle {#sss_moodle}
+#### MY451 on Moodle {-}
+<!-- {#sss_moodle} -->
 
 The course materials are all available on Moodle. Go to
 `http://moodle.lse.ac.uk/` and login using your *username* and
@@ -173,7 +174,7 @@ readings, weekly computer class assignments and the associated data
 sets, coursepack and other materials, as well as a section on news and
 announcements.
 
-#### Advisory Sessions
+#### Advisory Sessions {-}
 
 There will be a time each week during the Michaelmas and Lent terms
 during which a member of the teaching team will be available at the
@@ -189,7 +190,7 @@ term, when the advisory sessions can be very busy, we cannot guarantee
 that your questions from earlier sessions will be covered. **There will
 be no advisory sessions after the end of Lent Term.**
 
-#### Notes on studying for the course
+#### Notes on studying for the course {-}
 
 To learn the material from this course you must do the work every week
 since it is cumulative; if you miss a week or two (or sleep through it!)
@@ -208,7 +209,7 @@ in the lectures. If you are having any trouble this will reveal what the
 problem is. Thus the course is designed to have multiple, reinforcing
 ways of helping you get to grips with this material.
 
-#### Examinations/assessment
+#### Examinations/assessment {-}
 
 There will be a **two-hour examination in the Summer Term 2016**. This
 is an **open-book examination**, to which you are allowed to bring in
@@ -224,7 +225,7 @@ with a course code such as MC4M1 or MY4M1. If this is the case, your
 result for MY451 will contribute only part of the final mark for the
 package, with a weight determined by the regulations.
 
-#### Computing
+#### Computing {-}
 
 Students must know their Username and Password in time for the first
 class. This information can be obtained from IT Help Desk (Library, 1st
@@ -234,13 +235,13 @@ in Windows during the first two weeks of the term. The statistical
 package being used is SPSS, which will be introduced in the first
 computing class of the course.
 
-#### Software availability
+#### Software availability {-}
 
 A personal copy of the program SPSS for Windows can be bought by course
 participants (maximum 1 copy per person) for the price of £10 from IT
 services, **not** the Department of Methodology.
 
-#### Feedback
+#### Feedback {-}
 
 We would welcome any comments you have on the course. If there are any
 problems that we can deal with, we will attempt to do so as quickly as
@@ -249,7 +250,7 @@ departmental supervisor if you feel that would be easier for you. Also
 please let us know if you find any errors or omissions in the
 coursepack, so that we can correct them for next year.
 
-#### Acknowledgements
+#### Acknowledgements {-}
 
 The computer classes were extensively revised for 2012-13. The hard work
 of designing the new exercises and writing the revised instructions was
@@ -264,7 +265,7 @@ the current revision.
 
 \newpage
 
-#### Course Programme
+#### Course Programme {-}
 
   --------------------------------- -------------------------------------------------------------------------------------------------------------------------------
   **Week 1**
@@ -319,7 +320,7 @@ the current revision.
 
 \newpage
 
-#### FAQ: Frequently Asked Questions
+#### FAQ: Frequently Asked Questions {-}
 
 **Why do we use SPSS? I’ve heard that SAS/STATA/MINITAB/R/LIMDEP is much
 better.** At this level it does not matter which program you use since
